--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vguid911</title>
+  <title>V911 Pro Center</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-custom navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">v911</a>
+      <a class="navbar-brand" href="#">V911 Pro Center</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,7 +34,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="privacy">Privacy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -50,7 +49,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Virtual 911 Calling center</h1>
+          <h1 class="display-4 text-white mt-5 mb-2">Virtual 911 Pro Calling center</h1>
           <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab
             labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque
             unde nisi, totam quas ipsam.</p>
