--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,10 @@
   <header class="bg-custom py-5 mb-5">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
-        <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Virtual 911 Pro Calling center</h1>
+        <div class="col-lg-12" style="background-image: url('assets/icon5.svg');background-repeat: no-repeat;">
+          <h1 class="display-4 text-white mt-5 mb-2">
+            Virtual 911 Pro Calling center
+          </h1>
           <p class="lead mb-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab
             labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque
             unde nisi, totam quas ipsam.</p>
