--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <h1 class="display-4 text-white mt-5 mb-2">
             Virtual 911 Pro Calling center
           </h1>
-          <p class="lead mb-5 text-white-50">1Lorem one ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab
+          <p class="lead mb-5 text-white-50">Lorem two ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab
             labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque
             unde nisi, totam quas ipsam.</p>
         </div>
