--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-custom navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">V911 Pro Center</a>
+      <a class="navbar-brand" href="#">Virtual 911</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -50,11 +50,9 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12" style="background-image: url('assets/icon5.svg');background-repeat: no-repeat;">
           <h1 class="display-4 text-white mt-5 mb-2">
-            Virtual 911 Pro Calling center
+            Virtual 911
           </h1>
-          <p class="lead mb-5 text-white-50">Lorem two ipsum dolor sit amet, consectetur adipisicing elit. Non possimus ab
-            labore provident mollitia. Id assumenda voluptate earum corporis facere quibusdam quisquam iste ipsa cumque
-            unde nisi, totam quas ipsam.</p>
+          <p class="lead mb-5 text-white-50">Pictures say 1,000 words, Videos say a million. V911 provides the dispatcher a visual of the emergency with a live video of the scene from the caller’s smartphone.</p>
         </div>
       </div>
     </div>
@@ -77,11 +75,11 @@
       <div class="col-md-8 mb-5">
         <h2>What We Do</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta
-          quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo,
-          maiores!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in
-          nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.
+        <p>V911 allows for live video of an emergency streamed to the dispatcher for evaluation. </p>
+        <p>We bridge the gap of miscommunication and inaccurate information experienced by first responders and victims. V911 allows emergency services personnel to gather the critical information needed to administer fast, efficient, and quality care to victims.
+        </p>
+        <p>
+          This is made possible through the dispatcher's ability to collect visual observations not communicated by the caller, and make data driven decisions.
         </p>
         <a class="btn btn-danger btn-lg" href="#">Call to Action &raquo;</a>
       </div>
